--- a/index.html
+++ b/index.html
@@ -379,12 +379,12 @@
           <h5 class="modal-title" id="attribution">Attribution</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <div class="modal-body">
+        <div class="modal-body attribution-section">
           <div class="row row-cols-2 attribution-row">
-            <div class="col col-3">
+            <div class="col-3">
               <img src="images/co_state_web_portal_rgb_v_2.png" alt="southampton-soccer-game">
             </div>
-            <div class="col">
+            <div class="col-9">
               <div class="container">
                 <div class="row">
                   <div class="col-3">Title:</div>
@@ -396,16 +396,16 @@
                 </div>
                 <div class="row">
                   <div class="col-3">Link</div>
-                  <div class="col"><a href="-https://dcs.colorado.gov/ids/state-branding-guidelines/the-elements#Logo">View Here</a></div>
+                  <div class="col"><a href="https://dcs.colorado.gov/ids/state-branding-guidelines/the-elements#Logo" target="_blank">View Here</a></div>
                 </div>
               </div>
             </div>
           </div>
           <div class="row row-cols-2 attribution-row">
-            <div class="col col-3">
+            <div class="col-3">
               <img src="images/southampton-football-player.jpg" alt="southampton-soccer-game">
             </div>
-            <div class="col">
+            <div class="col-9">
               <div class="container">
                 <div class="row">
                   <div class="col-3">Title:</div>
@@ -417,7 +417,7 @@
                 </div>
                 <div class="row">
                   <div class="col-3">Link</div>
-                  <div class="col"><a href="https://www.flickr.com/photos/cosmiceggproductions/35820873034/in/photolist-XM2iK3-XCULzc-XCUeTn-XMhBxx-WBBwTe-WL7R5t-WBBLCi-XM2kSE-XR8jWp-Wznkzd-Xf7DEo-XVsVvd-XR8mE4-XVsW8f-WL7TQD-WL7S9H-XMhzM8-XR8p66-XM28K3-XVsWK7-WznaoG-XZBbVR-WL7RAD-XM25UU-WL7T8g-XVsTbU-WHSVkU-XMhxjH-WL7SnZ-XZBaSD-WL7SwM-XVsUQW-XVsVNh-WL7SKc-XZBb64-XMhAjk-XZBaFr-XZBbSz-XVsWt5-WL7SR4-XMhxGr-WL7SWe-XMhBR8-XZBaZc-XMhCov-WL7RNT-WL7RWZ-XVsWVN-XVsXsE-XozBvw">View Here</a></div>
+                  <div class="col"><a href="https://www.flickr.com/photos/cosmiceggproductions/35820873034/in/photolist-XM2iK3-XCULzc-XCUeTn-XMhBxx-WBBwTe-WL7R5t-WBBLCi-XM2kSE-XR8jWp-Wznkzd-Xf7DEo-XVsVvd-XR8mE4-XVsW8f-WL7TQD-WL7S9H-XMhzM8-XR8p66-XM28K3-XVsWK7-WznaoG-XZBbVR-WL7RAD-XM25UU-WL7T8g-XVsTbU-WHSVkU-XMhxjH-WL7SnZ-XZBaSD-WL7SwM-XVsUQW-XVsVNh-WL7SKc-XZBb64-XMhAjk-XZBaFr-XZBbSz-XVsWt5-WL7SR4-XMhxGr-WL7SWe-XMhBR8-XZBaZc-XMhCov-WL7RNT-WL7RWZ-XVsWVN-XVsXsE-XozBvw" target="_blank">View Here</a></div>
                 </div>
               </div>
             </div>
