--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                   <div class="col">Colorado State Logo</div>
                 </div>
                 <div class="row">
-                  <div class="col-3">Autor:</div>
+                  <div class="col-3">Author:</div>
                   <div class="col">Colorado</div>
                 </div>
                 <div class="row">
@@ -412,7 +412,7 @@
                   <div class="col">Southampton FC Versus Sevilla</div>
                 </div>
                 <div class="row">
-                  <div class="col-3">Autor:</div>
+                  <div class="col-3">Author:</div>
                   <div class="col">Steve Hogg</div>
                 </div>
                 <div class="row">
