--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
               <img src="images/co_state_web_portal_rgb_v_2.png" alt="southampton-soccer-game">
             </div>
             <div class="col-9">
-              <div class="container">
+              <div class="container attribution-text-container">
                 <div class="row">
                   <div class="col-3">Title:</div>
                   <div class="col">Colorado State Logo</div>
@@ -395,7 +395,7 @@
                   <div class="col">Colorado</div>
                 </div>
                 <div class="row">
-                  <div class="col-3">Link:</div>
+                  <div class="col-3">Link</div>
                   <div class="col"><a href="https://dcs.colorado.gov/ids/state-branding-guidelines/the-elements#Logo" target="_blank">View Here</a></div>
                 </div>
               </div>
@@ -406,7 +406,7 @@
               <img src="images/southampton-football-player.jpg" alt="southampton-soccer-game">
             </div>
             <div class="col-9">
-              <div class="container">
+              <div class="container attribution-text-container">
                 <div class="row">
                   <div class="col-3">Title:</div>
                   <div class="col">Southampton FC Versus Sevilla</div>
@@ -416,7 +416,7 @@
                   <div class="col">Steve Hogg</div>
                 </div>
                 <div class="row">
-                  <div class="col-3">Link:</div>
+                  <div class="col-3">Link</div>
                   <div class="col"><a href="https://www.flickr.com/photos/cosmiceggproductions/35820873034/in/photolist-XM2iK3-XCULzc-XCUeTn-XMhBxx-WBBwTe-WL7R5t-WBBLCi-XM2kSE-XR8jWp-Wznkzd-Xf7DEo-XVsVvd-XR8mE4-XVsW8f-WL7TQD-WL7S9H-XMhzM8-XR8p66-XM28K3-XVsWK7-WznaoG-XZBbVR-WL7RAD-XM25UU-WL7T8g-XVsTbU-WHSVkU-XMhxjH-WL7SnZ-XZBaSD-WL7SwM-XVsUQW-XVsVNh-WL7SKc-XZBb64-XMhAjk-XZBaFr-XZBbSz-XVsWt5-WL7SR4-XMhxGr-WL7SWe-XMhBR8-XZBaZc-XMhCov-WL7RNT-WL7RWZ-XVsWVN-XVsXsE-XozBvw" target="_blank">View Here</a></div>
                 </div>
               </div>
