fixed skatuary button

--- a/index.html
+++ b/index.html
@@ -252,6 +252,8 @@
 
               <p>Skatuary.com is built on the ExpressEngine CMS platform.</p>
 
+              <a type="button" class="btn primary-btn" href="https://skatuary.com/" target="_blank">Visit Site</a>
+
             </div>
           </div>
         </div>
