--- a/index.html
+++ b/index.html
@@ -167,13 +167,13 @@
             <div class="modal-body">
               <img src="images/sfc-homepage-screenshot.png" alt="sfc speakup homepage screenshot">
 
-              <p>At Convercent/OneTrust, I worked on a team with other CMS Technical Specialist to build ethics and compliance portals for many large clients. Once the Alpha program for our Speak Up Program was completed, I had the pleasure of
+              <p>At Convercent/OneTrust, I worked on a team with other CMS Technical Specialists to build ethics and compliance portals for many large clients. Once the Alpha program for our Speak Up Program was completed, I had the pleasure of
                 building out the Speak Up site for the Southampton Football Club.</p>
 
               <p>The Speak Up pages were largely templated, but I had to use both existing print brand guidelines and inspiration from the client's existing site to complete this build. It was an interesting and fun design challenge to try and match
                 the SFC's new Speak Up brand with our existing SUP template.</p>
 
-              <p>This site was built off of Acquia's Site Studio platform using the proprietary customized CMS owned by OneTrust. It's built to be fully responsive and accessible.</p>
+              <p>This site was built on Acquia's Site Studio using the proprietary customized CMS owned by OneTrust. It's built to be fully responsive and accessible.</p>
 
               <a type="button" class="btn primary-btn" href="https://sfc.speakuptrust.com/" target="_blank">Visit Site</a>
 
@@ -196,7 +196,7 @@
               <p>My client and owner of the Parakletos Osteopathic Clinic needed to migrate his website off of GoDaddy's legacy CMS platform onto their new CMS platform in a timely manner. This project required me to not only migrate all of the
                 content and assets, but I also had to work with the client on completely redesigning the website using GoDaddy's new templates and components.</p>
 
-              <p>Some customization was requied to add elements such as the black banners with quotes on the top and bottom of some pages as well as a large table, all of which were customized to be more mobile friendly.</p>
+              <p>Some customization was required to add elements such as the black banners with quotes on the top and bottom of some pages as well as a large table, all of which were customized to be more mobile friendly.</p>
 
               <p>In addition to the build, I also supplied a number of new photo assets for the client by doing a couple days of photo shoots and editing those photos for the site. We also built out a brand new user-authenticated portal for students
                 as well as added new content specific to skateboarding-related injuries and treatment.</p>
@@ -222,8 +222,8 @@
 
               <p>Tindog is a fake promotional app page I built as an assignment for a full-stack developer bootcamp that I am currently taking. We were tasked with duplicating the design of the page as closely as possible from scratch.</p>
 
-              <p>While much of the page was built out manually using HTML and CSS in my Atom text editor, we were also tasked with utilizing Bootstrap 5 to bring in some of the key elements, such as the main navigation and price package cards listed
-                at the bottom of the page. It was during this project that I started to learn how to tie in Font Awesome fonts and custom font libraries as well as utilize properties like z-index and various flex properties built within Bootstrap to
+              <p>While much of the page was built out manually using HTML and CSS, we were also tasked with utilizing Bootstrap 5 to bring in some of the key elements, such as the main navigation and price package cards listed
+                at the bottom of the page. It was during this project that I started to learn how to tie in Font Awesome icons and custom font libraries as well as utilize properties like z-index and various flex properties built within Bootstrap to
                 make a completely scalable and responsive single webpage from scratch.</p>
 
               <a type="button" class="btn primary-btn" href="TinDog-copy/tindog.html" target="_blank">Visit Site</a>
@@ -279,7 +279,7 @@
 
               <p>Yet another challenge to this project was the fact that the Client needed multiple translated versions of each page, and every resource had to be linked separately to a new language-specific resource.</p>
 
-              <p>This webiste was built one OneTrust's customized version of Acquia's Site Studio CMS platform.</p>
+              <p>This webiste was built on OneTrust's customized version of Acquia's Site Studio CMS platform.</p>
 
               <a type="button" class="btn primary-btn" href="https://bestbuy.speakuptrust.com/" target="_blank">Visit Site</a>
             </div>
@@ -301,13 +301,13 @@
               <p>I spent a little over 4 years helping local and state Colorado government entitites create their websites on the Colorado.gov CMS platform. A large part of my role was to provide training to our various partners as I guided them
                 through successful completion of their website projects.</p>
 
-              <p>When we began major efforts to migrate all our existing customers off of Drupal 7 onto Drupal 8, I was tasked with creating brand new training pages and videos for our partners. Before I left my position as Associate Project Manager,
+              <p>When we began major efforts to migrate all our existing customers off of Drupal 7 and onto Drupal 8, I was tasked with creating brand new training pages and videos for our partners. Before I left my position as Associate Project Manager,
                 I took it upon myself to revamp and redesign the training pages to make it easier for our partners to find the information they needed to support their Colorado.gov websites.</p>
 
-              <p>While I was not able to complete my initiative before leaving my position for new opportunities, I was able to nearly finish the "beginner" level set of courses. With some help from my fellow teammate, I redesigned, rewrote,
+              <p>While I was not able to complete my initiative before leaving my position for new opportunities, I was able to finish the "beginner" level set of courses. With some help from my fellow teammate, I redesigned, rewrote,
                 restructured, and, in some cases, re-recorded and edited new training videos for the introductory courses.</p>
 
-              <p>Linked to this page is the Beginner Courses landing page. Not only did I help structure and rebuild/redesign this page, I created the content for and built all the training pages listed. </p>
+              <p>Linked to this page is the Beginner Courses landing page. The subsequent pages linked on this landing page were all pages I created content for and redesigned.</p>
 
               <p>At the time of the project, these pages were built on Tyler Technologies NIC Division's own custom version of Drupal 8.</p>
 
